--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -39,7 +39,7 @@
 .input:focus,
 .textarea:focus,
 .select:focus {
-  border-color: #3f51b5;
+  border-color: #0056b3;
   outline: none;
 }
 
@@ -51,7 +51,7 @@
 }
 
 .button {
-  background-color: #3f51b5;
+  background-color: #007bff;
   color: #fff;
   padding: 12px 16px;
   border: none;
@@ -63,7 +63,7 @@
 }
 
 .button:hover {
-  background-color: #303f9f;
+  background-color: #0056b3;
 }
 
 .select {
